# Nike_microservice

./: .dockerignore  Dockerfile.frontend  README.Docker.md  README.md  db.sqlite3  docker-compose.yml  package-lock.json  requirements.txt
.github/workflows/: build.yml
cart/: cart.py  context_processors.py  views.py
cart/templates/: cart_summary.html
ecom/: settings.py
fastapi_app/: .dockerignore  .gitignore  Dockerfile  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt
payment/: admin.py  forms.py  models.py  urls.py  views.py
payment/migrations/: 0001_initial.py  0002_rename_address1_shippingaddress_shipping_address1_and_more.py  0003_alter_shippingaddress_shipping_address2_order_and_more.py  0004_rename_product_orderitem_product_order_shipped_and_more.py  0005_order_date_shipped.py
payment/templates/payment/: billing_info.html  checkout.html  not_shipped_dash.html  orders.html  shipped_dash.html
static/css/: styles.css
static/images/: 1
store/: admin.py  forms.py  models.py  views.py
store/migrations/: 0001_initial.py  0002_alter_category_options_product_is_sale_and_more.py  0003_profile.py  0004_profile_old_cart.py
store/templates/: about.html  base.html  category.html  category_summary.html  home.html  login.html  navbar.html  product.html  register.html  search.html  update_info.html  update_password.html  update_user.html
